src/index.css
/* background color: #0E0F0E */
/* 
Macbook pro: 1728px x 1117px2
Ipad 12: 1024px x 1366px
Iphone: 402px x 873px 
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Regular.woff2") format("woff2");
    font-weight: normal;
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Medium.woff2") format("woff2");
    font-weight: 500;
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Bold.woff2") format("woff2");
    font-weight: bold;
}

@font-face {
    font-family: "Satoshi";
    src: url("./assets/fonts/Satoshi.woff2") format("woff2");
    font-weight: normal;
}

@media (max-width: 1728px) {
    body{
        background-image: url("./assets/Background_Desktop.png");
    }

    .content-pane {
        margin-left: 291px;
        margin-top: 112px;

        height: 1002px;
        max-width: 709px;
    }

    /* bio */
    .bio-label {
        font-size: 20px;
        margin-bottom: 36px;
    }

    .bio-name {
        font-size: 64px;
        margin-bottom: 9px;
    }

    .bio-title {
        font-size: 32px;
        margin-bottom: 36px;
    }

    .svg-line{
        width: 32px;
        margin-right: 16px;
    }

    .bio {
        margin-bottom: 112px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 20px;
    }

    /* experience */
    .card-item-experience {
        display: flex;
        align-items: center;
        gap: 48px;

        margin-top: 48px;
    }

    .text-experience-year{
        font-size: 20px;
        white-space: nowrap;
    }

    .text-experience-title {
        font-size: 24px;
    }

    .text-experience-description {
        font-size: 22px;
        margin-top: 16px;

        text-align: justify;
    }
}

@media (max-width: 1024px) {
    body{
        background-image: url("./assets/Background_Ipad.png");
    }

    .content-pane {
        margin-left: 156px;
        margin-top: 182px;

        height: 1184px;
        max-width: 709px;
    }

    /* Bio */
    .bio-label {
        font-size: 20px;
    }

    .bio-name {
        font-size: 48px;
    }

    .bio-title {
        font-size: 24px;
    }

    .text-bio {
        font-size: 20px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 14px;
    }

    /* experience */
    .card-item-experience {
        margin-top: 40px;
    }

    .text-experience-title {
        font-size: 20px;
    }

    .text-experience-description {
        font-size: 20px;
        margin-top: 12px;
    }
}

@media (max-width: 402px) {
    body{
        background-image: url("./assets/Background_Iphone.png");
    }

    .content-pane {
        margin-left: 36px;
        margin-top: 132px;

        height: 700px;
        max-width: 330px;
    }

    /* bio  */
    .bio-label {
        font-size: 12px;
        margin-bottom: 18px;
    }

    .bio-name {
        font-size: 20px;
    }

    .bio-title {
        font-size: 12px;
        margin-bottom: 18px;
    }

    .text-bio {
        font-size: 12px;
    }

    .svg-line{
        width: 18px;
        margin-right: 7px;
    }

    .bio {
        margin-bottom: 54px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 9px;
    }

    /* experience */
    .card-item-experience {
        margin-top: 24px;

        flex-direction: column;
        gap: 3px;
    }

    .text-experience-year{
        font-size: 10px;
    }

    .text-experience-title {
        font-size: 12px;
    }

    .text-experience-description {
        font-size: 12px;
        margin-top: 4px;
    }

    .wrapper-experience > :first-child {
        margin-top: 8px;
    }
}

/* Small Components  */
body{
    background-color: #0E0F0E;
    background-size: cover;
    background-repeat: no-repeat;
}

h1 {
    font-family: JetBrains Mono;
    font-weight: bold;
    color: #f6f6f6;
}

h3, .text-bio-bold{
    font-family: JetBrains Mono;
    font-weight: 500;
    color: #f6f6f6;
}

h2 {
    font-family: JetBrains Mono;
    font-weight: normal;
    color: #66d593;
}

p {
    font-family: Satoshi;
}

.text-description-grey-50 {  
    color: #868686;
    opacity: 0.5;
}

.text-jetbrains-mono-regular {
    font-family: JetBrains Mono;
    font-weight: normal;
}

.text-jetbrains-mono-bold {
    font-family: JetBrains Mono;
    font-weight: bold;
}

.text-satoshi-regular {
    font-family: Satoshi;
    font-weight: normal;
}

.primary-green {
    color: #66d593;
}

.white {
    color: #f6f6f6;
}

.overflow {
    overflow-y: scroll;
}

.hide-scrollbar {
  /* Firefox */
  scrollbar-width: none;

  /* Internet Explorer and Edge */
  -ms-overflow-style: none;
}

/* Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
  width: 0;
  height: 0;
}

.text-bio div {
    animation: typing 3s steps(50) forwards;
    overflow: hidden;
    white-space: nowrap;
}

@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

.card-item-experience:hover {
    .text-experience-title {
        color: #66d593;
    }

    .text-experience-year,
    .text-experience-description {
        color: #f6f6f6;
        opacity: 0.75;

    }
}

